# test_task_twisted

./: .env.example  .gitignore  Dockerfile  README.md  config_service.postman_collection.json  docker-compose.yml  pyproject.toml
src/config_service/: container.py  main.py
src/config_service/application/dto/: requests.py  responses.py
src/config_service/application/use_cases/: get_config.py  get_history.py  save_config.py
src/config_service/domain/: exceptions.py
src/config_service/domain/entities/: configuration.py
src/config_service/domain/repositories/: i_configuration_repository.py
src/config_service/domain/services/: configuration_domain_service.py
src/config_service/infrastructure/database/: connection.py  migrations.py  pg_configuration_repository.py
src/config_service/infrastructure/serialization/: yaml_parser.py
src/config_service/infrastructure/templating/: jinja_processor.py
src/config_service/presentation/handlers/: config_handlers.py
src/config_service/presentation/resources/: config_resource.py  routes.py
src/config_service/presentation/utils/: request_utils.py
tests/: conftest.py
tests/application/: test_get_config.py  test_save_config.py
tests/domain/: test_configuration_domain_service.py
