[project]
name = "config-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "twisted",
    "klein",
    "psycopg2-binary",
    "pyyaml",
    "jinja2",
    "dependency-injector",
    "orjson",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-twisted",
    "mypy",
    "ruff",
    "types-PyYAML",
]

[project.scripts]
config-service = "config_service.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "config_service.infrastructure.*",
    "config_service.presentation.*",
    "config_service.main",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
